--- a/beef.html
+++ b/beef.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cassie's Home Recipes</title>
+    <meta name="description" content="homemade cooking recipes beef" />
+    <title>Home Recipes</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -61,18 +62,20 @@
       <figure>
         <div class="image-banner">
           <div class="image-slider">
-            <img
-              src="./ASSETS/Images/sloppy_joes_1.jpg"
-              alt="image of sloppy joe burger"
-              height="200"
-              width="300"
-            />
-            <img
-              src="./ASSETS/Images/Beef-Stroganoff.webp"
-              height="200"
-              width="300"
-              alt="image of beef Beef-Stroganoff dish"
-            />
+            <a href="./sloppy_joes.html">
+              <img
+                src="./ASSETS/Images/sloppy_joes_1.jpg"
+                alt="image of sloppy joe burger"
+                height="200"
+                width="300"
+            /></a>
+            <a href="./beef_stroganoff.html">
+              <img
+                src="./ASSETS/Images/Beef-Stroganoff.webp"
+                height="200"
+                width="300"
+                alt="image of beef Beef-Stroganoff dish"
+            /></a>
             <img
               src="./ASSETS/Images/sticky_beef.webp"
               height="200"
@@ -99,18 +102,20 @@
             />
           </div>
           <div class="image-slider">
-            <img
-              src="./ASSETS/Images/sloppy_joes_1.jpg"
-              alt="image of sloppy joe burger"
-              height="200"
-              width="300"
-            />
-            <img
-              src="./ASSETS/Images/Beef-Stroganoff.webp"
-              height="200"
-              width="300"
-              alt="image of beef Beef-Stroganoff dish"
-            />
+            <a href="./sloppy_joes.html">
+              <img
+                src="./ASSETS/Images/sloppy_joes_1.jpg"
+                alt="image of sloppy joe burger"
+                height="200"
+                width="300"
+            /></a>
+            <a href="./beef_stroganoff.html">
+              <img
+                src="./ASSETS/Images/Beef-Stroganoff.webp"
+                height="200"
+                width="300"
+                alt="image of beef Beef-Stroganoff dish"
+            /></a>
             <img
               src="./ASSETS/Images/sticky_beef.webp"
               height="200"
