--- a/breads.html
+++ b/breads.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cassie's Home Recipes</title>
+    <meta name="description" content="homemade cooking recipes bread" />
+    <title>Home Recipes</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -67,24 +68,26 @@
               height="200"
               width="300"
             />
-            <img
-              src="./ASSETS/Images/sourdough_loaf.jpg"
-              height="200"
-              width="300"
-              alt="image of a sourdough loaf"
-            />
+            <a href="./sourdough.html">
+              <img
+                src="./ASSETS/Images/sourdough_loaf.jpg"
+                height="200"
+                width="300"
+                alt="image of a sourdough loaf"
+            /></a>
             <img
               src="./ASSETS/Images/pizza_1.jpg"
               height="200"
               width="300"
               alt="image of pizza slice"
             />
-            <img
-              src="./ASSETS/Images/baguette.jpeg"
-              height="200"
-              width="300"
-              alt="image of a baguette"
-            />
+            <a href="./baguettes.html"
+              ><img
+                src="./ASSETS/Images/baguette.jpeg"
+                height="200"
+                width="300"
+                alt="image of a baguette"
+            /></a>
             <img
               src="./ASSETS/Images/white_loaf.jpg"
               height="200"
@@ -105,24 +108,26 @@
               height="200"
               width="300"
             />
-            <img
-              src="./ASSETS/Images/sourdough_loaf.jpg"
-              height="200"
-              width="300"
-              alt="image of a sourdough loaf"
-            />
+            <a href="./sourdough.html">
+              <img
+                src="./ASSETS/Images/sourdough_loaf.jpg"
+                height="200"
+                width="300"
+                alt="image of a sourdough loaf"
+            /></a>
             <img
               src="./ASSETS/Images/pizza_1.jpg"
               height="200"
               width="300"
               alt="image of pizza slice"
             />
-            <img
-              src="./ASSETS/Images/baguette.jpeg"
-              height="200"
-              width="300"
-              alt="image of a baguette"
-            />
+            <a href="./baguettes.html"
+              ><img
+                src="./ASSETS/Images/baguette.jpeg"
+                height="200"
+                width="300"
+                alt="image of a baguette"
+            /></a>
             <img
               src="./ASSETS/Images/white_loaf.jpg"
               height="200"
