--- a/chicken.html
+++ b/chicken.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cassie's Home Recipes</title>
+    <meta name="description" content="homemade cooking recipes chicken" />
+    <title>Home Recipes</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -81,18 +82,20 @@
               width="300"
               alt="image of chicken burgers"
             />
-            <img
-              src="./ASSETS/Images/garlic_lime_chicken.jpg"
-              height="200"
-              width="300"
-              alt="image of garlic lime chicken dish"
-            />
-            <img
-              src="./ASSETS/Images/chicken_paprikash.jpg"
-              height="200"
-              width="300"
-              alt="image of chicken chicken paprikash dish"
-            />
+            <a href="./garlic_lime_chicken.html">
+              <img
+                src="./ASSETS/Images/garlic_lime_chicken.jpg"
+                height="200"
+                width="300"
+                alt="image of garlic lime chicken dish"
+            /></a>
+            <a href="./chicken_paprikash.html"
+              ><img
+                src="./ASSETS/Images/chicken_paprikash.jpg"
+                height="200"
+                width="300"
+                alt="image of chicken chicken paprikash dish"
+            /></a>
             <img
               src="./ASSETS/Images/roast chicken.webp"
               height="200"
@@ -119,18 +122,20 @@
               width="300"
               alt="image of chicken burgers"
             />
-            <img
-              src="./ASSETS/Images/garlic_lime_chicken.jpg"
-              height="200"
-              width="300"
-              alt="image of garlic lime chicken dish"
-            />
-            <img
-              src="./ASSETS/Images/chicken_paprikash.jpg"
-              height="200"
-              width="300"
-              alt="image of chicken chicken paprikash dish"
-            />
+            <a href="./garlic_lime_chicken.html">
+              <img
+                src="./ASSETS/Images/garlic_lime_chicken.jpg"
+                height="200"
+                width="300"
+                alt="image of garlic lime chicken dish"
+            /></a>
+            <a href="./chicken_paprikash.html"
+              ><img
+                src="./ASSETS/Images/chicken_paprikash.jpg"
+                height="200"
+                width="300"
+                alt="image of chicken chicken paprikash dish"
+            /></a>
             <img
               src="./ASSETS/Images/roast chicken.webp"
               height="200"
