--- a/spiced_cookies.html
+++ b/spiced_cookies.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cassie's Home Recipes</title>
+    <meta
+      name="description"
+      content="homemade cooking recipes spiced-cookies"
+    />
+    <title>Home Recipes</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -69,7 +73,7 @@
         </div>
         <div class="recipe-img">
           <img
-            src="./ASSETS/Images/spiced_cookies.jpg"
+            src="./ASSETS/Images/spiced_cookies_homemade.jpg"
             alt="image of cookies"
             height="250"
             width="350"
