--- a/sweets.html
+++ b/sweets.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cassie's Home Recipes</title>
+    <meta name="description" content="homemade cooking recipes sweets" />
+    <title>Home Recipes</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -61,12 +62,13 @@
       <figure>
         <div class="image-banner">
           <div class="image-slider">
-            <img
-              src="./ASSETS/Images/homemade_cookies_2.jpg"
-              alt="image of chocolate chip cookies"
-              height="200"
-              width="300"
-            />
+            <a href="./cookies.html"
+              ><img
+                src="./ASSETS/Images/homemade_cookies_2.jpg"
+                alt="image of chocolate chip cookies"
+                height="200"
+                width="300"
+            /></a>
             <img
               src="./ASSETS/Images/brownies.jpg"
               height="200"
@@ -91,20 +93,22 @@
               width="300"
               alt="image of applecrumble"
             />
-            <img
-              src="./ASSETS/Images/spiced_cookies_homemade.jpg"
-              height="200"
-              width="300"
-              alt="image of spiced cookies"
-            />
+            <a href="./spiced_cookies.html"
+              ><img
+                src="./ASSETS/Images/spiced_cookies_homemade.jpg"
+                height="200"
+                width="300"
+                alt="image of spiced cookies"
+            /></a>
           </div>
           <div class="image-slider">
-            <img
-              src="./ASSETS/Images/homemade_cookies_2.jpg"
-              alt="image of chocolate chip cookies"
-              height="200"
-              width="300"
-            />
+            <a href="./cookies.html"
+              ><img
+                src="./ASSETS/Images/homemade_cookies_2.jpg"
+                alt="image of chocolate chip cookies"
+                height="200"
+                width="300"
+            /></a>
             <img
               src="./ASSETS/Images/brownies.jpg"
               height="200"
@@ -129,12 +133,13 @@
               width="300"
               alt="image of applecrumble"
             />
-            <img
-              src="./ASSETS/Images/spiced_cookies_homemade.jpg"
-              height="200"
-              width="300"
-              alt="image of spiced cookies"
-            />
+            <a href="./spiced_cookies.html"
+              ><img
+                src="./ASSETS/Images/spiced_cookies_homemade.jpg"
+                height="200"
+                width="300"
+                alt="image of spiced cookies"
+            /></a>
           </div>
         </div>
       </figure>
