--- a/lamb.html
+++ b/lamb.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cassie's Home Recipes</title>
+    <meta name="description" content="homemade cooking recipes lamb" />
+    <title>Home Recipes</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -69,12 +70,13 @@
               width="300"
               alt="image of a lamb stew"
             />
-            <img
-              src="./ASSETS/Images/lamb_meatballs.jpg"
-              height="200"
-              width="300"
-              alt="image of lamb meatballs"
-            />
+            <a href="./moroccan_meatballs.html">
+              <img
+                src="./ASSETS/Images/lamb_meatballs.jpg"
+                height="200"
+                width="300"
+                alt="image of lamb meatballs"
+            /></a>
             <img
               src="./ASSETS/Images/lamb_roast.jpg"
               height="200"
@@ -107,12 +109,13 @@
               width="300"
               alt="image of a lamb stew"
             />
-            <img
-              src="./ASSETS/Images/lamb_meatballs.jpg"
-              height="200"
-              width="300"
-              alt="image of lamb meatballs"
-            />
+            <a href="./moroccan_meatballs.html">
+              <img
+                src="./ASSETS/Images/lamb_meatballs.jpg"
+                height="200"
+                width="300"
+                alt="image of lamb meatballs"
+            /></a>
             <img
               src="./ASSETS/Images/lamb_roast.jpg"
               height="200"
