--- a/sloppy_joes.html
+++ b/sloppy_joes.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cassie's Home Recipes</title>
+    <meta name="description" content="homemade cooking recipes sloppy-joes" />
+    <title>Home Recipes</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
