finished (possible it may need tweaks)

--- a/baguettes.html
+++ b/baguettes.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./ASSETS/CSS/style.min.css" />
   </head>
   <body>
+    <!-- top banner section BEGINS -->
     <header>
       <div class="banner">
         <div class="banner-text">
@@ -32,16 +33,19 @@
           <p>~ an archive of all your favourite dishes ~</p>
         </div>
       </div>
-    </header>
-    <div class="navbar-container">
-      <div class="navbar">
-        <a href="./breads.html">breads</a>
-        <a href="./lamb.html">lamb</a>
-        <a href="./chicken.html">chicken</a>
-        <a href="./beef.html">beef</a>
-        <a href="./sweets.html">sweets</a>
+      <!-- top banner section ENDS -->
+      <!-- navbar section BEGINS -->
+      <div class="navbar-container">
+        <div class="navbar">
+          <a href="./breads.html">breads</a>
+          <a href="./lamb.html">lamb</a>
+          <a href="./chicken.html">chicken</a>
+          <a href="./beef.html">beef</a>
+          <a href="./sweets.html">sweets</a>
+        </div>
       </div>
-    </div>
+    </header>
+    <!-- navbar section ENDS -->
     <main class="container">
       <!-- inputfield section BEGINS -->
       <div class="form-container">
