--- a/beef.html
+++ b/beef.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./ASSETS/CSS/style.min.css" />
   </head>
   <body>
+    <!-- top banner section BEGINS -->
     <header>
       <div class="banner">
         <div class="banner-text">
@@ -32,18 +33,21 @@
           <p>~ an archive of all your favourite dishes ~</p>
         </div>
       </div>
-    </header>
-    <nav>
-      <div class="navbar-container">
-        <div class="navbar">
-          <a href="./breads.html">breads</a>
-          <a href="./lamb.html">lamb</a>
-          <a href="./chicken.html">chicken</a>
-          <a href="./beef.html">beef</a>
-          <a href="./sweets.html">sweets</a>
+      <!-- top banner section ENDS -->
+      <!-- navbar section BEGINS -->
+      <nav>
+        <div class="navbar-container">
+          <div class="navbar">
+            <a href="./breads.html">breads</a>
+            <a href="./lamb.html">lamb</a>
+            <a href="./chicken.html">chicken</a>
+            <a href="./beef.html">beef</a>
+            <a href="./sweets.html">sweets</a>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </header>
+    <!-- navbar section ENDS -->
     <main class="container">
       <h1 class="form-instructions">please select from the drop down menu</h1>
       <!-- inputfield section BEGINS -->
