--- a/beef.html
+++ b/beef.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="homemade cooking recipes beef" />
+    <meta name="description" content="homemade cooking recipes chicken" />
     <title>Home Recipes</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,8 +24,8 @@
               class="rose-image"
               src="./ASSETS/Images/bunch_of_roses.png"
               alt="image of a rose"
-              width="70"
-              height="100"
+              width="120"
+              height="140"
           /></a>
           <a href="./index.html"><h1>recipes</h1></a>
         </div>
@@ -127,19 +127,19 @@
               alt="image of sticky beef rice"
             />
             <img
-              src="./ASSETS/Images/beef burger.jpg"
+              src="./ASSETS/Images/beef_burger.jpg"
               height="200"
               width="300"
-              alt="image of beef_burger"
+              alt="image of beef burger"
             />
             <img
-              src="./ASSETS/Images/beef meatballs.jpg"
+              src="./ASSETS/Images/beef_meatballs.jpg"
               height="200"
               width="300"
               alt="image of meatballs on pasta"
             />
             <img
-              src="./ASSETS/Images/beef ragu.jpg"
+              src="./ASSETS/Images/beef_ragu.jpg"
               height="200"
               width="300"
               alt="image of beef ragu dish"
