--- a/lamb.html
+++ b/lamb.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <!-- top banner section BEGINS -->
-    <header>
-      <div class="banner">
+    <header class="banner">
+      <div>
         <div class="banner-text">
           <a href="./index.html"> <h1>home</h1></a>
           <a href="./index.html">
@@ -33,8 +33,10 @@
           <p>~ an archive of all your favourite dishes ~</p>
         </div>
       </div>
-      <!-- top banner section ENDS -->
-      <!-- navbar section BEGINS -->
+    </header>
+    <!-- top banner section ENDS -->
+    <!-- navbar section BEGINS -->
+    <header>
       <nav>
         <div class="navbar-container">
           <div class="navbar">
